// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[archer] 1`] = `
{
  "accRating": 15.225,
  "accuracyPct": 8.225,
  "allStatTotal": 263,
  "atk": 62,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 8.6,
  "critMult": 1.5550299513149461,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 148,
  "evaRating": 19.200000000000003,
  "evasionPct": 19.200000000000003,
  "extraAttackChancePct": 68.3,
  "healMult": 1.1500000000000001,
  "hp": 640,
  "intStat": 15,
  "lukStat": 55,
  "magicAtk": 8,
  "magicDef": 14,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 136.6,
  "spiStat": 15,
  "strStat": 15,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[lowbie] 1`] = `
{
  "accRating": 8.775,
  "accuracyPct": 1.775,
  "allStatTotal": 100,
  "atk": 10,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.4604255649461715,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 15,
  "evaRating": 2.7,
  "evasionPct": 2.7,
  "extraAttackChancePct": 7.125,
  "healMult": 1.1500000000000001,
  "hp": 190,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 8,
  "magicDef": 14,
  "maxHp": 190,
  "maxMp": 92,
  "minDamage": 3,
  "mp": 92,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 14.25,
  "spiStat": 15,
  "strStat": 25,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[mage] 1`] = `
{
  "accRating": 11.684999999999999,
  "accuracyPct": 4.685,
  "allStatTotal": 253,
  "atk": 8,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.45280302180028,
  "critResistPct": 4.5,
  "def": 6,
  "dexStat": 15,
  "evaRating": 2.7,
  "evasionPct": 2.7,
  "extraAttackChancePct": 7.125,
  "healMult": 1.33,
  "hp": 640,
  "intStat": 148,
  "lukStat": 15,
  "magicAtk": 47,
  "magicDef": 43,
  "maxHp": 640,
  "maxMp": 501,
  "minDamage": 9,
  "mp": 501,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 14.25,
  "spiStat": 45,
  "strStat": 15,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[ninja] 1`] = `
{
  "accRating": 10.825,
  "accuracyPct": 3.8249999999999997,
  "allStatTotal": 255,
  "atk": 28,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 16.2,
  "critMult": 1.7329671756295133,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 60,
  "evaRating": 16.8,
  "evasionPct": 16.8,
  "extraAttackChancePct": 28.5,
  "healMult": 1.1500000000000001,
  "hp": 640,
  "intStat": 15,
  "lukStat": 135,
  "magicAtk": 8,
  "magicDef": 14,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 57,
  "spiStat": 15,
  "strStat": 15,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[tank] 1`] = `
{
  "accRating": 9.175,
  "accuracyPct": 2.175,
  "allStatTotal": 275,
  "atk": 28,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.4755190439471157,
  "critResistPct": 1.5,
  "def": 30,
  "dexStat": 15,
  "evaRating": 2.7,
  "evasionPct": 2.7,
  "extraAttackChancePct": 4.625,
  "healMult": 1.7700000000000002,
  "hp": 835,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 8,
  "magicDef": 14,
  "maxHp": 835,
  "maxMp": 227,
  "minDamage": 10,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 9.25,
  "spiStat": 15,
  "strStat": 45,
  "vitStat": 170,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[warrior] 1`] = `
{
  "accRating": 11.235,
  "accuracyPct": 4.234999999999999,
  "allStatTotal": 263,
  "atk": 51,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.5501420281376743,
  "critResistPct": 1.5,
  "def": 18,
  "dexStat": 15,
  "evaRating": 2.7,
  "evasionPct": 2.7,
  "extraAttackChancePct": 1.625,
  "healMult": 1.31,
  "hp": 720,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 8,
  "magicDef": 14,
  "maxHp": 720,
  "maxMp": 227,
  "minDamage": 17,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 3.25,
  "spiStat": 15,
  "strStat": 148,
  "vitStat": 55,
}
`;

exports[`골든: resolveBattle PvE 지문 (엔진 가드) > PvE 지문 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "warrior_vs_들개",
    "logSha": "046bbab21c878960833465ca0388cecaa28c44a6",
    "outcome": "win",
    "playerHp": 720,
    "playerMp": 227,
    "turns": 7,
  },
  {
    "enemyHp": 0,
    "label": "warrior_vs_골렘",
    "logSha": "ba816cadb976be1ef0ac6ea57c0327b5d574319b",
    "outcome": "win",
    "playerHp": 720,
    "playerMp": 227,
    "turns": 16,
  },
  {
    "enemyHp": 0,
    "label": "ninja_crit_vs_늑대",
    "logSha": "5ba909a9584b5954717997d647818eb09e5b41df",
    "outcome": "win",
    "playerHp": 616,
    "playerMp": 227,
    "turns": 46,
  },
  {
    "enemyHp": 0,
    "label": "archer_pen_vs_골렘",
    "logSha": "ceb3d4955ad3cae57c5d5032b77af9e82419fea9",
    "outcome": "win",
    "playerHp": 640,
    "playerMp": 227,
    "turns": 17,
  },
  {
    "enemyHp": 0,
    "label": "magic_vs_약탈자",
    "logSha": "e5d72d0394cf82de1e61abe59cdc08f0384caed7",
    "outcome": "win",
    "playerHp": 640,
    "playerMp": 501,
    "turns": 35,
  },
  {
    "enemyHp": 0,
    "label": "counter_tank_vs_들소",
    "logSha": "013a57692c8be06218370e3b8b0797961628b68c",
    "outcome": "win",
    "playerHp": 815,
    "playerMp": 227,
    "turns": 81,
  },
  {
    "enemyHp": 0,
    "label": "heal_vs_들소_boss",
    "logSha": "5d62a07772715f10f4ff9ce7be86cb0b9769be7a",
    "outcome": "win",
    "playerHp": 835,
    "playerMp": 227,
    "turns": 98,
  },
  {
    "enemyHp": 0,
    "label": "mage_skills_vs_골렘",
    "logSha": "4483cdc1605948382dd9c0eb6abf78a3e900a963",
    "outcome": "win",
    "playerHp": 640,
    "playerMp": 501,
    "turns": 18,
  },
  {
    "enemyHp": 0,
    "label": "lowbie_vs_들개",
    "logSha": "3e902ef782601086270e47cd14177e6062b7e026",
    "outcome": "win",
    "playerHp": 190,
    "playerMp": 92,
    "turns": 22,
  },
]
`;

exports[`골든: resolveBattlePvP 지문 (PvP 엔진 가드) > PvP 지문 매트릭스 1`] = `
[
  {
    "label": "warrior_vs_mage",
    "logSha": "ebe99a27873ddf4c0f22e928397ef9510056b89c",
    "outcome": "p1_win",
    "turns": 63,
  },
  {
    "label": "archer_vs_ninja",
    "logSha": "fa640d39061e624b1a9dcbfae50696df0d25ab6d",
    "outcome": "p1_win",
    "turns": 49,
  },
  {
    "label": "tank_vs_warrior",
    "logSha": "a5b7a4b61049defee53b44f460bf6225d09d1c7f",
    "outcome": "p2_win",
    "turns": 169,
  },
]
`;

exports[`골든: 적 페이즈 메커닉 커버리지 (리팩터 가드) > 적 페이즈 메커닉 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "enemy_dot_tick",
    "logSha": "d85ac6efac6f0dad49e6fd4af5be2d927b5a8c9b",
    "outcome": "win",
    "playerHp": 717,
    "playerMp": 227,
    "turns": 20,
  },
  {
    "enemyHp": 0,
    "label": "chill_enemy",
    "logSha": "efa320de2715a5b5065fb8aec1b82ec9292b3043",
    "outcome": "win",
    "playerHp": 759,
    "playerMp": 227,
    "turns": 40,
  },
  {
    "enemyHp": 0,
    "label": "thorns_reflect",
    "logSha": "73bcef30dd2f7b5aa5ffbe966a705848372822ed",
    "outcome": "win",
    "playerHp": 835,
    "playerMp": 227,
    "turns": 43,
  },
  {
    "enemyHp": 0,
    "label": "evade_reflect",
    "logSha": "621facab4ff9af6db3f104b03b45e0808674ff36",
    "outcome": "win",
    "playerHp": 610,
    "playerMp": 227,
    "turns": 91,
  },
  {
    "enemyHp": 0,
    "label": "enrage_enemy",
    "logSha": "cde1c01421d1c1cfe347a972c85c5c4d3807b805",
    "outcome": "win",
    "playerHp": 720,
    "playerMp": 227,
    "turns": 19,
  },
  {
    "enemyHp": 0,
    "label": "brace_enemy",
    "logSha": "9cd0308e1f1d49d4ce2ff0ee7319930d4fab3c7f",
    "outcome": "win",
    "playerHp": 714,
    "playerMp": 227,
    "turns": 23,
  },
  {
    "enemyHp": 0,
    "label": "heavyblow_enemy",
    "logSha": "12f57a7fd24546275c9a1e7159f32de24a45a6cb",
    "outcome": "win",
    "playerHp": 810,
    "playerMp": 227,
    "turns": 91,
  },
]
`;
